Fixed link visibility for github and linkedin.

--- a/stylesheets/mainStylesheet.css
+++ b/stylesheets/mainStylesheet.css
@@ -115,6 +115,7 @@ section {
     position: relative;
     text-align: center;
     color: white;
+    z-index: 100;
 }
 
 /* Ocean container. */
